# road-markings-detection

./: .gitignore  LICENSE  README.md  another_notebook.ipynb  dataset.py  medium_notebook.ipynb  model.py  model_inference.py  notebook.ipynb  pyproject.toml  requirements.txt
ImageLabeler/: __init__.py
imgs_merged/: labels.csv
