[tool.poetry]
name = "road-markings-detection"
version = "0.1.0"
description = ""
authors = ["Piotr Hondra <piotr.hondra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.11.0"
Pillow = "^9.1.1"
numpy = "^1.22.4"
opencv-python = "^4.5.5"
torchvision = "^0.12.0"
PyQt5 = "^5.15.6"
lxml = "^4.8.0"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
ipykernel = "^6.13.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
